crates/keron-lang/tests/corpus/errors/check/for_duplicate_pair_idents.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: duplicate binding `k` in `for` pattern: key and value must be distinct
  --> 3:9
  |
3 | for (k, k) in m {
  |         ^
